# tension

./: .gitignore  .travis.yml  Cargo.toml  README.md
src/: buffer.rs  error.rs  lib.rs  num.rs  tensor.rs
src/buffer/: buffer.rs  common.rs  device.rs  host.rs  mod.rs
src/tensor/: common.rs  device.rs  host.rs  mod.rs  shape.rs  tensor.rs  test.rs
src/tensor/host/: iter.rs  mod.rs  tensor.rs  tests.rs
