[package]
name = "tension"
version = "0.0.0"
authors = ["Alexey Gerasev <alexey.gerasev@gmail.com>"]
edition = "2018"
description = "Tensor library with OpenCL acceleration"
documentation = "https://docs.rs/tension"
readme = "README.md"
homepage = "https://github.com/agerasev/tension"
repository = "https://github.com/agerasev/tension"
license = "MIT OR Apache-2.0"
keywords = ["tensor", "opencl"]
categories = ["algorithms", "mathematics", "science"]

[features]
default = ["device"]
device = ["ocl", "num-complex-v01"]

[dependencies]
num-traits = "0.2"
num-integer = "0.1"
num-complex = "0.3"
ocl = { version = "0.19.3", optional = true }
num-complex-v01 = { package = "num-complex", version = "0.1", optional = true }
